--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@ $ git checkout gh-pages
         <aside id="sidebar">
           <a href="https://github.com/Invoke-IR/PowerForensics/zipball/master" class="button">
             <small>Download</small>
-            .zip file
+            .zip
           </a>
           <a href="https://github.com/Invoke-IR/PowerForensics/tarball/master" class="button">
             <small>Download</small>
-            .tar.gz file
+            .tar.gz
           </a>
 
           <p class="repo-owner"><a href="https://github.com/Invoke-IR/PowerForensics"></a> is maintained by <a href="https://github.com/Invoke-IR">Invoke-IR</a>.</p>
