--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ $ git checkout gh-pages
             .tar.gz
           </a>
 
-          <p class="repo-owner"><a href="https://github.com/Invoke-IR/PowerForensics"></a> is maintained by <a href="https://github.com/Invoke-IR">Invoke-IR</a>.</p>
+          <p class="repo-owner"><a href="https://github.com/Invoke-IR/PowerForensics">PowerForensics</a> is maintained by <a href="https://github.com/Invoke-IR">Invoke-IR</a>.</p>
 
         </aside>
       </div>
