--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1>>_PowerForensics</h1>
+        <h2>Invoke-IR>PowerForensics</h2>
         <h2></h2>
         <a href="https://github.com/Invoke-IR/PowerForensics" class="button"><small>View project on</small> GitHub</a>
       </div>
