--- a/index.html
+++ b/index.html
@@ -33,9 +33,26 @@
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<pre><code>
+  PS Invoke-IR> Import-Module PowerForensics
+  PS Invoke-IR> Get-Command -Module PowerForensics
+  
+  CommandType       Name                        ModuleName
+  -----------       ----                        ----------
+  Cmdlet            Get-AttrDef                 powerforensics
+  Cmdlet            Get-ContentRaw              powerforensics
+  Cmdlet            Get-FileSystemStatistic     powerforensics
+  Cmdlet            Get-Hash                    powerforensics
+  Cmdlet            Get-Mactime                 powerforensics
+  Cmdlet            Get-MBR                     powerforensics
+  Cmdlet            Get-MFTAttribute            powerforensics
+  Cmdlet            Get-MFTRecord               powerforensics
+  Cmdlet            Get-MFTRecordIndex          powerforensics
+  Cmdlet            Get-PartitionTable          powerforensics
+  Cmdlet            Get-Prefetch                powerforensics
+  Cmdlet            Get-Timezone                powerforensics
+  Cmdlet            Get-VolumeBootRecord        powerforensics
+  Cmdlet            Invoke-DD                   powerforensics
 </code></pre>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
