--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="install-powerforensics" class="anchor" href="#install-powerforensics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installing PowerForensics</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Download PowerForensics by browsing to downloads.powerforensics.invoke-ir.com</p>
 
 <pre><code>
   PS Invoke-IR> Import-Module PowerForensics
+  
   PS Invoke-IR> Get-Command -Module PowerForensics
   
   CommandType       Name                        ModuleName
