--- a/index.html
+++ b/index.html
@@ -58,6 +58,25 @@
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
+          <h2 class="LW_CollapsibleArea_TitleDiv">
+            <div>
+              <a href="javascript:void(0)" class="LW_CollapsibleArea_TitleAhref" title="Collapse" role="button">
+                <span class="cl_CollapsibleArea_expanding LW_CollapsibleArea_Img"></span>
+                <span class="LW_CollapsibleArea_Title">Inheritance Hierarchy</span>
+              </a>
+              <div class="LW_CollapsibleArea_HrDiv">
+                <hr class="LW_CollapsibleArea_Hr" />
+              </div>
+            </div>
+          </h2>
+          <div class="sectionblock">
+            <a id="familyToggle">
+              
+            </a>
+            <a href="https://msdn.microsoft.com/en-us/library/system.object(v=vs.110).aspx">System<span xmlns="">.</span>Object</a>
+            <br />  <a href="https://msdn.microsoft.com/en-us/library/system.marshalbyrefobject(v=vs.110).aspx">System<span xmlns="">.</span>MarshalByRefObject</a><br />    <a href="https://msdn.microsoft.com/en-us/library/system.componentmodel.component(v=vs.110).aspx">System.ComponentModel<span xmlns="">.</span>Component</a><br />      <span class="selflink">System.Diagnostics<span xmlns="">.</span>Process</span><br /></div>
+        </div>
+
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
 
