--- a/masterbootrecord.html
+++ b/masterbootrecord.html
@@ -24,6 +24,8 @@
         <a href="https://github.com/Invoke-IR/PowerForensics" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
+    
+    <p>The <span class="selflink">Process</span> type exposes the following members.</p><div><h2 class="LW_CollapsibleArea_TitleDiv"><div><a href="javascript:void(0)" class="LW_CollapsibleArea_TitleAhref" title="Collapse" role="button"><span class="cl_CollapsibleArea_expanding LW_CollapsibleArea_Img"></span><span class="LW_CollapsibleArea_Title">Constructors</span></a><div class="LW_CollapsibleArea_HrDiv"><hr class="LW_CollapsibleArea_Hr" /></div></div></h2><div class="sectionblock"><a id="constructorTableToggle"></a><table id="memberList" class="members"><tr><th class="iconColumn">
   </body>
   
 </html>
