--- a/masterbootrecord.html
+++ b/masterbootrecord.html
@@ -31,7 +31,7 @@
     <h2>Constructors</h2>
     <table>
      <tr>
-       <th>Name/th>
+       <th>Name</th>
        <th>Description</th>
      </tr>
      <tr>
