--- a/masterbootrecord.html
+++ b/masterbootrecord.html
@@ -27,7 +27,7 @@
     
     <h2>Inheritance Hierarchy</h2>
     
-    <a id="constructors" class="anchor" href="#constructors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Constructors</h3>
+    <h3></h3>Constructors</h3>
     <table>
      <tr>
        <th>Name</th>
