--- a/masterbootrecord.html
+++ b/masterbootrecord.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Powerforensics by Invoke-IR</title>
+    <title>MasterBootRecord Class (InvokeIR.PowerForensics)</title>
   </head>
 
   <body>
@@ -29,53 +29,29 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-<a id="install-powerforensics" class="anchor" href="#install-powerforensics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installing PowerForensics</h3>
+<a id="inheritance" class="anchor" href="#inheritance" aria-hidden="true"><span class="octicon octicon-link"></span></a>Inheritance Hierarchy</h3>
 
 <p>Download PowerForensics by browsing to downloads.powerforensics.invoke-ir.com</p>
 
-<pre><code>  PS Invoke-IR> Import-Module PowerForensics
-  
-  PS Invoke-IR> Get-Command -Module PowerForensics
-  
-  CommandType       Name                        ModuleName
-  -----------       ----                        ----------
-  Cmdlet            Get-AttrDef                 powerforensics
-  Cmdlet            Get-ContentRaw              powerforensics
-  Cmdlet            Get-FileSystemStatistic     powerforensics
-  Cmdlet            Get-Hash                    powerforensics
-  Cmdlet            Get-Mactime                 powerforensics
-  Cmdlet            Get-MBR                     powerforensics
-  Cmdlet            Get-MFTAttribute            powerforensics
-  Cmdlet            Get-MFTRecord               powerforensics
-  Cmdlet            Get-MFTRecordIndex          powerforensics
-  Cmdlet            Get-PartitionTable          powerforensics
-  Cmdlet            Get-Prefetch                powerforensics
-  Cmdlet            Get-Timezone                powerforensics
-  Cmdlet            Get-VolumeBootRecord        powerforensics
-  Cmdlet            Invoke-DD                   powerforensics
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="constructors" class="anchor" href="#constructors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Constructors</h3>
 
 <p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
 
 <h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<a id="properties" class="anchor" href="#properties" aria-hidden="true"><span class="octicon octicon-link"></span></a>Properties</h3>
 
 <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="methods" class="anchor" href="#methods" aria-hidden="true"><span class="octicon octicon-link"></span></a>Methods</h3>
 
 <p>Jared Atkinson (<a href="https://github.com/Invoke-IR" class="user-mention">@Invoke-IR</a>)</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
         </section>
 
         <aside id="sidebar">
