--- a/masterbootrecord.html
+++ b/masterbootrecord.html
@@ -37,20 +37,44 @@
 <h3>
 <a id="constructors" class="anchor" href="#constructors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Constructors</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<table>
+ <tr>
+   <th>Name</th>
+   <th>Description</th>
+ </tr>
+ <tr>
+   <td>January</td>
+   <td>$100</td>
+ </tr>
+</table>
 
 <h3>
 <a id="properties" class="anchor" href="#properties" aria-hidden="true"><span class="octicon octicon-link"></span></a>Properties</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<table>
+ <tr>
+   <th>Name</th>
+   <th>Description</th>
+ </tr>
+ <tr>
+   <td>January</td>
+   <td>$100</td>
+ </tr>
+</table>
 
 <h3>
 <a id="methods" class="anchor" href="#methods" aria-hidden="true"><span class="octicon octicon-link"></span></a>Methods</h3>
 
-<p>Jared Atkinson (<a href="https://github.com/Invoke-IR" class="user-mention">@Invoke-IR</a>)</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<table>
+ <tr>
+   <th>Name</th>
+   <th>Description</th>
+ </tr>
+ <tr>
+   <td>January</td>
+   <td>$100</td>
+ </tr>
+</table>
 
         </section>
 
