--- a/masterbootrecord.html
+++ b/masterbootrecord.html
@@ -28,6 +28,9 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
+          <h1>MasterBootRecord Class</h1>
+          <p></p>
+          
           <h3>
 <a id="inheritance" class="anchor" href="#inheritance" aria-hidden="true"><span class="octicon octicon-link"></span></a>Inheritance Hierarchy</h3>
 
@@ -43,8 +46,8 @@
    <th>Description</th>
  </tr>
  <tr>
-   <td>January</td>
-   <td>$100</td>
+   <td>MasterBootRecord</td>
+   <td>Initializes a new instance of the MasterBootRecord class.</td>
  </tr>
 </table>
 
