--- a/masterbootrecord.html
+++ b/masterbootrecord.html
@@ -33,19 +33,23 @@
           
           <h3>
 <a id="inheritance" class="anchor" href="#inheritance" aria-hidden="true"><span class="octicon octicon-link"></span></a>Inheritance Hierarchy</h3>
+<p><a href="https://msdn.microsoft.com/en-us/library/system.object(v=vs.110).aspx">System.Object</a></p>
+<p>  InvokeIR.PowerForensics.MasterBootRecord</p>
 
-<p>Download PowerForensics by browsing to downloads.powerforensics.invoke-ir.com</p>
-
+<p><b></b>Namespace:</b> InvokeIR.PowerForensics</p>
+<p><b>Assembly:</b> PowerForensics (PowerForensics.dll)</p>
 
 <h3>
 <a id="constructors" class="anchor" href="#constructors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Constructors</h3>
 
 <table>
  <tr>
+   <th></th>
    <th>Name</th>
    <th>Description</th>
  </tr>
  <tr>
+   <td></td>
    <td>MasterBootRecord</td>
    <td>Initializes a new instance of the MasterBootRecord class.</td>
  </tr>
@@ -56,10 +60,12 @@
 
 <table>
  <tr>
+   <th></th>
    <th>Name</th>
    <th>Description</th>
  </tr>
  <tr>
+   <td></td>
    <td>January</td>
    <td>$100</td>
  </tr>
@@ -70,10 +76,12 @@
 
 <table>
  <tr>
+   <th></th>
    <th>Name</th>
    <th>Description</th>
  </tr>
  <tr>
+   <td></td>
    <td>January</td>
    <td>$100</td>
  </tr>
