--- a/masterbootrecord.html
+++ b/masterbootrecord.html
@@ -36,8 +36,7 @@
 <p><a href="https://msdn.microsoft.com/en-us/library/system.object(v=vs.110).aspx">System.Object</a></p>
 <p>  InvokeIR.PowerForensics.MasterBootRecord</p>
 
-<p><b></b>Namespace:</b> InvokeIR.PowerForensics</p>
-<p><b>Assembly:</b> PowerForensics (PowerForensics.dll)</p>
+ <strong>Namespace:</strong> <a href="">InvokeIR.PowerForensics</a><br /> <strong>Assembly:</strong><span>PowerForensics</span> (in PowerForensics.dll)
 
 <h3>
 <a id="constructors" class="anchor" href="#constructors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Constructors</h3>
