--- a/masterbootrecord.html
+++ b/masterbootrecord.html
@@ -31,12 +31,10 @@
           <h1>MasterBootRecord Class</h1>
           <p></p>
           
-          <h3>
-<a id="inheritance" class="anchor" href="#inheritance" aria-hidden="true"><span class="octicon octicon-link"></span></a>Inheritance Hierarchy</h3>
-<p><a href="https://msdn.microsoft.com/en-us/library/system.object(v=vs.110).aspx">System.Object</a></p>
-<p>  InvokeIR.PowerForensics.MasterBootRecord</p>
-
- <strong>Namespace:</strong> <a href="">InvokeIR.PowerForensics</a><br /> <strong>Assembly:</strong><span>PowerForensics</span> (in PowerForensics.dll)
+        <h3><a id="inheritance" class="anchor" href="#inheritance" aria-hidden="true"><span class="octicon octicon-link"></span></a>Inheritance Hierarchy</h3>
+        <p><a href="https://msdn.microsoft.com/en-us/library/system.object(v=vs.110).aspx">System.Object</a>
+          InvokeIR.PowerForensics.MasterBootRecord</p>
+        <strong>Namespace:</strong> <a href="">InvokeIR.PowerForensics</a><br /> <strong>Assembly: </strong><span>PowerForensics</span> (in PowerForensics.dll)
 
 <h3>
 <a id="constructors" class="anchor" href="#constructors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Constructors</h3>
