--- a/masterbootrecord.html
+++ b/masterbootrecord.html
@@ -32,8 +32,8 @@
           <p></p>
           
         <h3><a id="inheritance" class="anchor" href="#inheritance" aria-hidden="true"><span class="octicon octicon-link"></span></a>Inheritance Hierarchy</h3>
-        <p><a href="https://msdn.microsoft.com/en-us/library/system.object(v=vs.110).aspx">System.Object</a>
-          InvokeIR.PowerForensics.MasterBootRecord</p>
+        <a href="https://msdn.microsoft.com/en-us/library/system.object(v=vs.110).aspx">System.Object</a>
+        <strong>  InvokeIR.PowerForensics.MasterBootRecord</strong>
         <strong>Namespace:</strong> <a href="">InvokeIR.PowerForensics</a><br /> <strong>Assembly: </strong><span>PowerForensics</span> (in PowerForensics.dll)
 
 <h3>
