--- a/masterbootrecord.html
+++ b/masterbootrecord.html
@@ -32,7 +32,7 @@
           <p></p>
           
         <h3><a id="inheritance" class="anchor" href="#inheritance" aria-hidden="true"><span class="octicon octicon-link"></span></a>Inheritance Hierarchy</h3>
-        <p><a href="https://msdn.microsoft.com/en-us/library/system.object(v=vs.110).aspx">System.Object</a><br>  InvokeIR.PowerForensics.MasterBootRecord</p>
+        <p><a href="https://msdn.microsoft.com/en-us/library/system.object(v=vs.110).aspx">System.Object</a><br>.InvokeIR.PowerForensics.MasterBootRecord</p>
         <strong>Namespace:</strong> <a href="">InvokeIR.PowerForensics</a><br /> <strong>Assembly: </strong><span>PowerForensics</span> (in PowerForensics.dll)
 
 <h3>
@@ -62,7 +62,22 @@
  </tr>
  <tr>
    <td></td>
-   <td>January</td>
+   <td>Bootable</td>
+   <td></td>
+ </tr>
+  <tr>
+   <td></td>
+   <td>StartSector</td>
+   <td>$100</td>
+ </tr>
+  <tr>
+   <td></td>
+   <td>EndSector</td>
+   <td>$100</td>
+ </tr>
+  <tr>
+   <td></td>
+   <td>SystemID</td>
    <td>$100</td>
  </tr>
 </table>
@@ -78,7 +93,7 @@
  </tr>
  <tr>
    <td></td>
-   <td>January</td>
+   <td>GetBytes</td>
    <td>$100</td>
  </tr>
 </table>
