--- a/masterbootrecord.html
+++ b/masterbootrecord.html
@@ -63,22 +63,22 @@
  <tr>
    <td></td>
    <td>Bootable</td>
-   <td></td>
+   <td>Indicates whether partition is bootable</td>
  </tr>
   <tr>
    <td></td>
    <td>StartSector</td>
-   <td>$100</td>
+   <td>Offset from the beginning of the disk to the beginning of the volume counting by sectors</td>
  </tr>
   <tr>
    <td></td>
    <td>EndSector</td>
-   <td>$100</td>
+   <td>Offset from the beginning of the disk to the end of the volume counting by sectors</td>
  </tr>
   <tr>
    <td></td>
    <td>SystemID</td>
-   <td>$100</td>
+   <td>Gets the file system for the partition</td>
  </tr>
 </table>
 
